<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="photo_of_estate">Gallery</string>
    <string name="description">Description : </string>
    <string name="surface"> Surface : </string>
    <string name="rooms"> Rooms : </string>
    <string name="bedrooms"> Bedrooms : </string>
    <string name="bathrooms"> Bathrooms : </string>
    <string name="landsize"> Land size : </string>
    <string name="type"> Property type : </string>
    <string name="price"> Price : </string>
    <string name="realtor"> Realtor :</string>
    <string name="validate">Validate</string>
    <string name="picture">Add Picture</string>
    <string name="number">Address number :</string>
    <string name="complement">Complement :</string>
    <string name="street">"Street : "</string>
    <string name="district">District :</string>
    <string name="postcode">Postcode :</string>
    <string name="city">"City : "</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="next">Next</string>
    <string name="create">Create Estate</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="obligatory">Obligatory</string>
    <string name="school">School</string>
    <string name="store">Store</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="movie_theatre">Movie theatre</string>
    <string name="theatre">Theatre</string>
    <string name="subway">Subway</string>
    <string name="nightlife">Nightlife</string>
    <string name="sold">SOLD</string>
    <string name="on_sale">This estate is on Sale</string>
    <string name="minimum_price">Min. price</string>
    <string name="maximum_price">Max. price</string>
    <string name="min_surface">Min. surface</string>
    <string name="max_surface">Max. surface</string>
    <string name="min_room">Min. room</string>
    <string name="max_room">Max. room</string>
    <string name="min_bedroom">Min. Bedroom</string>
    <string name="max_bedroom">Max. bedroom</string>
    <string name="min_bathroom">Min. bathroom</string>
    <string name="max_bathroom">Max. bathroom</string>
    <string name="min_landsize">Min. land size</string>
    <string name="max_landsize">Maw. land size</string>
    <string name="point_of_interest">Point of interest : </string>
    <string name="point_of_interest_2">Point of interest</string>
    <string name="date_of_entry">Entry date : </string>
    <string name="before">Before :</string>
    <string name="at">At :</string>
    <string name="after">After :</string>
    <string name="sold_date">Sold date :</string>
    <string name="sale">On Sale</string>
    <string name="min_photo">Min. photo :</string>
    <string name="penthouse">Penthouse</string>
    <string name="house">House</string>
    <string name="loft">Loft</string>
    <string name="apartment">Apartment</string>
    <string name="castle">Castle</string>
<!--    <string name="sync">Sync</string>-->
    <string name="photo_name">Photo name</string>
    <string name="information">Information</string>
    <string name="show_detail">Show detail</string>
    <string name="descriptions">Description</string>
    <string name="mansion">Mansion</string>
    <string name="update">Update</string>
    <string name="clear_search">Clear search</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="upload_in_progress">Upload in progress</string>


    <string-array name="type">
        <item>Penthouse</item>
        <item>House</item>
        <item>Loft</item>
        <item>Apartment</item>
        <item>Castle</item>
        <item>Mansion</item>
    </string-array>

</resources>
