<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".activity.addoredit.fragment.partone.AOEPartOneFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_add_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_add_type"
        app:layout_constraintBottom_toBottomOf="@id/et_add_type"/>

    <EditText
        android:id="@+id/et_add_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/obligatory"
        android:textColorHint="#50ff0000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_type"
        app:layout_constraintBottom_toTopOf="@id/et_add_price"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_add_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/dollar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_add_price"
        app:layout_constraintBottom_toBottomOf="@id/et_add_price"/>

    <EditText
        android:id="@+id/et_add_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/obligatory"
        android:textColorHint="#50ff0000"
        app:layout_constraintTop_toBottomOf="@id/et_add_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_price"
        app:layout_constraintBottom_toTopOf="@id/et_add_surface"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_add_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surface"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_add_surface"
        app:layout_constraintBottom_toBottomOf="@id/et_add_surface"/>

    <EditText
        android:id="@+id/et_add_surface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/obligatory"
        android:textColorHint="#50ff0000"
        app:layout_constraintTop_toBottomOf="@id/et_add_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_surface"
        app:layout_constraintBottom_toTopOf="@id/et_add_rooms"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_add_rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rooms"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/rooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_add_rooms"
        app:layout_constraintBottom_toBottomOf="@id/et_add_rooms"/>

    <EditText
        android:id="@+id/et_add_rooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_add_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_rooms"
        app:layout_constraintBottom_toTopOf="@id/et_add_landsize"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_add_landsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landsize"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/landsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_add_landsize"
        app:layout_constraintBottom_toBottomOf="@id/et_add_landsize"/>

    <EditText
        android:id="@+id/et_add_landsize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_add_rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_landsize"
        app:layout_constraintBottom_toTopOf="@id/bt_one_next"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_one_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/next"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_one_back"/>

    <Button
        android:id="@+id/bt_one_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_close_24"
        android:text="@string/cancel"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_one_next"/>




</androidx.constraintlayout.widget.ConstraintLayout>